# rustpam

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pypirc.template  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  clippy.toml  pyproject.toml
.github/: dependabot.yml  markdown-link-check-config.json
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
docs/: API.md  DEVELOP.md  QUICKSTART.md
rustpam/: __init__.py  onebatchpam.py
scripts/: build_and_install.ps1  build_and_install.sh  bump_version.py
src/: lib.rs
test/: test_basic.py
