[package]
name = "rustpam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rustpam"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.16"
rayon = "1.10"
smallvec = "1.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
